[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/stylebox/panel.tres" type="StyleBox" id=1]
[ext_resource path="res://source/old_ui/amount_popup/AmountPopup.gd" type="Script" id=2]

[node name="AmountPopup" type="PanelContainer"]
margin_right = 14.0
margin_bottom = 14.0
custom_styles/panel = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 3.0
margin_top = 3.0
margin_right = 109.0
margin_bottom = 51.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 106.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Less" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 20.0
margin_bottom = 24.0
text = "<"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 24.0
margin_right = 82.0
margin_bottom = 24.0
align = 1
max_length = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="More" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 86.0
margin_right = 106.0
margin_bottom = 24.0
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Confirm" type="Button" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 106.0
margin_bottom = 48.0
text = "ok"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Less" to="." method="_on_Less_pressed"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_entered" from="VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/More" to="." method="_on_More_pressed"]
[connection signal="pressed" from="VBoxContainer/Confirm" to="." method="_on_Confirm_pressed"]
